--- a/src/GUI.form
+++ b/src/GUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="514" height="476"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-14145488"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="bf13b" layout-manager="GridLayoutManager" row-count="7" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,10 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-14145488"/>
+          <foreground color="-1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="84775" class="javax.swing.JButton" binding="Button9">
@@ -21,9 +26,11 @@
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="9"/>
             </properties>
           </component>
@@ -32,9 +39,11 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="4"/>
             </properties>
           </component>
@@ -43,9 +52,11 @@
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="5"/>
             </properties>
           </component>
@@ -54,9 +65,11 @@
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="8"/>
             </properties>
           </component>
@@ -65,9 +78,11 @@
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="6"/>
             </properties>
           </component>
@@ -76,9 +91,11 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="7"/>
             </properties>
           </component>
@@ -87,6 +104,7 @@
               <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1602223"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
@@ -98,9 +116,11 @@
               <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="/"/>
             </properties>
           </component>
@@ -109,9 +129,11 @@
               <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="x"/>
             </properties>
           </component>
@@ -120,9 +142,11 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="1"/>
             </properties>
           </component>
@@ -131,9 +155,11 @@
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="2"/>
             </properties>
           </component>
@@ -142,9 +168,11 @@
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="3"/>
             </properties>
           </component>
@@ -153,9 +181,11 @@
               <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="+"/>
             </properties>
           </component>
@@ -164,9 +194,11 @@
               <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="-"/>
             </properties>
           </component>
@@ -175,9 +207,11 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="0"/>
             </properties>
           </component>
@@ -186,9 +220,11 @@
               <grid row="6" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="="/>
             </properties>
           </component>
@@ -197,8 +233,10 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="sin"/>
             </properties>
           </component>
@@ -207,8 +245,10 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="cos"/>
             </properties>
           </component>
@@ -217,8 +257,10 @@
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="tan"/>
             </properties>
           </component>
@@ -227,8 +269,10 @@
               <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="x²"/>
             </properties>
           </component>
@@ -237,19 +281,11 @@
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="18"/>
-              <text value="√"/>
-            </properties>
-          </component>
-          <component id="f4a17" class="javax.swing.JButton" binding="DecButton">
-            <constraints>
-              <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <borderPainted value="true"/>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
-              <text value="."/>
+              <foreground color="-1"/>
+              <text value="√"/>
             </properties>
           </component>
           <component id="fb3d1" class="javax.swing.JButton" binding="asinButton">
@@ -257,8 +293,10 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="arcsin"/>
             </properties>
           </component>
@@ -267,8 +305,10 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="arccos"/>
             </properties>
           </component>
@@ -277,25 +317,19 @@
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="arctan"/>
-            </properties>
-          </component>
-          <component id="7528f" class="javax.swing.JButton" binding="logButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <font size="18"/>
-              <text value="log"/>
             </properties>
           </component>
           <component id="aef76" class="javax.swing.JButton" binding="ACButton" default-binding="true">
             <constraints>
-              <grid row="1" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1602223"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
@@ -307,9 +341,11 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value=")"/>
             </properties>
           </component>
@@ -318,7 +354,10 @@
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
+              <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="e"/>
             </properties>
           </component>
@@ -327,9 +366,11 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
               <borderPainted value="true"/>
               <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="("/>
             </properties>
           </component>
@@ -338,7 +379,10 @@
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14408658"/>
+              <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="π"/>
             </properties>
           </component>
@@ -347,7 +391,10 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
+              <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="abs"/>
             </properties>
           </component>
@@ -356,8 +403,36 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-11185320"/>
+              <focusPainted value="false"/>
               <font size="18"/>
+              <foreground color="-1"/>
               <text value="ln"/>
+            </properties>
+          </component>
+          <component id="7528f" class="javax.swing.JButton" binding="logButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-11185320"/>
+              <focusPainted value="false"/>
+              <font size="18"/>
+              <foreground color="-1"/>
+              <text value="log"/>
+            </properties>
+          </component>
+          <component id="f4a17" class="javax.swing.JButton" binding="DecButton">
+            <constraints>
+              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-11185320"/>
+              <borderPainted value="true"/>
+              <focusPainted value="false"/>
+              <font size="18"/>
+              <foreground color="-1"/>
+              <text value="."/>
             </properties>
           </component>
         </children>
@@ -369,7 +444,10 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-2431270"/>
           <font size="36"/>
+          <foreground color="-12696225"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
